# cctui

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PRD.md  README.md  STATUS.md  biome.json  docker-compose.yaml  lefthook.yml
.github/workflows/: release.yml
channel/: package.json  tsconfig.json
channel/src/: archive.ts  bridge.ts  hooks.ts  index.ts  mcp.ts  skills.ts  transcript.ts  types.ts
channel/test/: archive.test.ts  bridge.test.ts  hooks.test.ts  mcp.test.ts  transcript.test.ts
crates/cctui-admin/: Cargo.toml
crates/cctui-admin/src/: main.rs  path_remap.rs
crates/cctui-channel/: Cargo.toml
crates/cctui-channel/src/: archive.rs  bridge.rs  config.rs  lib.rs  manifest.rs  mcp.rs  skills.rs  transcript.rs  types.rs
crates/cctui-channel/tests/: archive_walk.rs  bridge_http.rs  manifest_build.rs  transcript_tail.rs
crates/cctui-proto/: Cargo.toml
crates/cctui-proto/src/: api.rs  identity.rs  lib.rs  models.rs  util.rs  ws.rs
crates/cctui-server/: Cargo.toml  build.rs
crates/cctui-server/src/: archive_store.rs  auth.rs  config.rs  crypto.rs  db.rs  main.rs  policy.rs  registry.rs  skill_store.rs  state.rs  transcript_parser.rs  ws.rs
crates/cctui-server/src/routes/: admin.rs  admin_auth.rs  archive.rs  bootstrap.rs  channel_bundle.rs  channels.rs  check.rs  credentials.rs  enroll.rs  events.rs  install.rs  mod.rs  permissions.rs  post_tool_use.rs  prompts.rs  sessions.rs  skills.rs  spawn.rs  stop.rs  transcript.rs  web.rs
crates/cctui-server/tests/: integration.rs
crates/cctui-server/web/: index.html
crates/cctui-shim/: Cargo.toml
crates/cctui-shim/src/: main.rs
crates/cctui-tui/: Cargo.toml
crates/cctui-tui/src/: app.rs  client.rs  install.rs  main.rs  selfupdate.rs  theme.rs
crates/cctui-tui/src/ui/: color.rs  diff_render.rs  highlight.rs  line_utils.rs  live_wrap.rs  markdown_render.rs  mod.rs  style.rs  terminal_palette.rs  wrapping.rs
crates/cctui-tui/src/views/: conversation.rs  help.rs  mod.rs  permission.rs  sessions.rs
crates/cctui-tui/src/widgets/: hotkeys.rs  mod.rs  status_bar.rs  tree.rs
deploy/: Dockerfile
deploy/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
docs/superpowers/plans/: 2026-03-28-hook-routing-redesign.md  2026-03-28-unified-mcp-channel.md  2026-04-17-jsonl-archive-sync.md
docs/superpowers/specs/: 2026-03-28-hook-routing-redesign.md  2026-03-28-unified-mcp-channel-design.md
migrations/: 001_create_sessions.sql  002_create_stream_events.sql  003_prompts.sql  004_credentials.sql  005_session_id_to_text.sql  006_account_id_to_text.sql  007_session_transcript.sql  008_auth.sql  009_archive_index.sql  010_skill_registry.sql  011_machines_deleted_at.sql  012_session_status_3state.sql  013_archive_manifest.sql
scripts/: bootstrap.sh.tpl  install-agent.sh  install.sh  setup-claude.sh  setup.py.tpl  streamer.py  test-session.sh
