[package]
name = "cctui-shim"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cctui-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
