[package]
name = "cctui-shim"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cctui-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "rt-multi-thread", "macros", "fs", "time"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
