[package]
name = "cctui-tui"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cctui-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
anyhow.workspace = true
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.12", features = ["json"] }
tui-markdown = "0.3.7"
rat-widget = "3.2.1"
rat-text = "3.1.0"
rat-markdown = "0.7.3"
rat-scrolled = "2.0.2"
